--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Web Projects</a></li>
+							<li><a href="other-projects.html">Other projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/ezkias/" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
